# ex-GPT-admin2

./: .env.example  .gitignore  ADMIN_API_STATUS_REPORT.md  AGENTS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.worker  IMPLEMENTATION_STATUS.md  NOTICE_INTEGRATION_COMPLETE.md  NOTICE_INTEGRATION_GUIDE.md  README.md  deploy.sh  docker-compose.yml  pg_hba_add.sql  pyproject.toml  pytest.ini  test_categorization.py  test_document_lifecycle.sh  update_pg_hba.sh
admin-api/: IMPLEMENTATION_UPDATE.md  alembic.ini  docker-compose.yml  fix_duplicates.sql  pyproject.toml  pytest.ini
admin-ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
app/: dependencies.py  main.py  main_public.py
deployment/: apache_proxy_admin_api.conf  apache_proxy_chat_stream.conf
docs/: ADMIN_TOOL_FEATURES_PRD.md  AIRGAP_QUICKSTART.md  AI_PATH_DEBUG.md  AUTH_CONTROLLER_SECURITY_CHECKLIST.md  AUTO_CATEGORIZATION_IMPLEMENTATION.md  CATEGORY_ORGANIZATION_BASED.md  CHAT_SYSTEM_STATUS.md  COMPLIANCE_CHECKLIST.md  DATABASE_SCHEMA.md  DAY19_PERFORMANCE_REPORT.md  DOCUMENT_UPLOAD_DELETE_TEST_GUIDE.md  DUPLICATE_FIX_COMPLETE.md  EX_GPT_INTEGRATION.md  FAILURE_LOG.md  FINAL_STATUS_REPORT.md  FRONTEND_INTEGRATION_GUIDE.md  FRONT_SERVER_SETUP.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS_REPORT.md  PER-002_TEST_REPORT.md  PRD.md  PRD_STT_SYSTEM.md  PRD_v2.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  RFP.txt  RQ_PARALLEL_PROCESSING_GUIDE.md  SPRING_BOOT_AUTH_INTEGRATION.md  STORE_USAGE_GUIDE.md  SUCCESS_CHAT_API.md  adminpage.txt  (+5 more)
(+786 files in other folders)
